--- a/src/app/core/auth/components/register/register.component.html
+++ b/src/app/core/auth/components/register/register.component.html
@@ -1,4 +1,4 @@
-<section class="my-10 mt-20">
+<section class="my-7">
     <div class="max-w-xl mx-auto shadow border border-gray-100 p-10 rounded-2xl">
         <h2 class="main-h2 rounded-xl">Register Now:</h2>
 
@@ -77,5 +77,16 @@
             </div>
             }
         </form>
+        <div>
+            <div class="flex items-center my-6">
+                <hr class="flex-grow border-gray-300" />
+                <span class="mx-4 text-gray-400 text-sm">or</span>
+                <hr class="flex-grow border-gray-300" />
+            </div>
+            <div class="text-center text-sm">
+                <span class="text-gray-600">Already have an account?</span>
+                <a routerLink="/login" class="text-main font-semibold hover:underline ml-1">Login now</a>
+            </div>
+        </div>
     </div>
 </section>
