--- a/src/app/features/product/components/product-detalis/product-detalis.component.html
+++ b/src/app/features/product/components/product-detalis/product-detalis.component.html
@@ -40,7 +40,7 @@
                     <span>{{ productDetails.price }} EGP</span>
                     <span><i class="fa-solid fa-star text-rating"></i> {{ productDetails.ratingsAverage }}</span>
                 </div>
-                <button class="main-btn opacity-100">Add To Cart</button>
+                <button (click)="addProductToCart(productDetails.id)" class="main-btn opacity-100">Add To Cart</button>
             </div>
         </div>
         }@else {
