--- a/src/app/features/orders/components/orders/orders.component.html
+++ b/src/app/features/orders/components/orders/orders.component.html
@@ -1,11 +1,13 @@
+@if(!isLoading){
+@if(allOrdersList.length > 0){
 <section class=" relative">
     <div>
         <h2 class="main-h2">
             My Orders
         </h2>
-            <p class="text-center text-gray-500 text-lg capitalize pb-2">
-                Thank you for your purchases! You can view all your order summaries below
-            </p>
+        <p class="text-center text-gray-500 text-lg capitalize pb-2">
+            Thank you for your purchases! You can view all your order summaries below
+        </p>
     </div>
 
     @for (order of allOrdersList| paginate:{itemsPerPage:5, currentPage: p}; track $index) {
@@ -117,3 +119,22 @@
     <pagination-controls previousLabel="" nextLabel="" (pageChange)="p = $event"
         class="pagination-spreads"></pagination-controls>
 </section>
+}@else{
+<div class="container mb-15 mx-auto my-10">
+    <div class="row">
+        <div class="col-span-12 text-center">
+            <img src="/images/orders.png" class="mx-auto w-105" alt="man-carrying-an-empty-cart">
+            <h2 class="font-bold text-2xl mb-2">You haven’t placed any orders yet</h2>
+            <p class="text-gray-700 mb-0">
+                Let's change that! Discover awesome products and place your first order today.
+            </p>
+            <button routerLink="/products" class="w-md opacity-100 main-btn">Start Shopping</button>
+        </div>
+    </div>
+</div>
+}
+}@else {
+<h2 class="text-main text-5xl col-span-12 text-center my-6 uppercase font-bold">
+    Loading <i class="fa-solid fa-spinner"></i>
+</h2>
+}
