--- a/src/app/features/orders/components/orders/orders.component.html
+++ b/src/app/features/orders/components/orders/orders.component.html
@@ -10,7 +10,7 @@
         </p>
     </div>
 
-    @for (order of allOrdersList| paginate:{itemsPerPage:5, currentPage: p}; track $index) {
+    @for (order of allOrdersList| paginate:{itemsPerPage:3, currentPage: p}; track $index) {
     <div class="w-full max-w-7xl px-4 py-3 md:px-5 lg-6 mx-auto">
         <div class="border-2 border-main rounded-xl pt-6 max-w-xl max-lg:mx-auto lg:max-w-full">
             <div class="flex flex-col lg:flex-row lg:items-center justify-between px-6 pb-6 border-b border-gray-200">
@@ -24,7 +24,7 @@
                     </p>
                 </div>
                 <button
-                    class="rounded-2xl py-3 px-7 font-semibold text-sm leading-7 text-white bg-main max-lg:mt-5 shadow-sm shadow-transparent transition-all duration-500 hover:bg-main hover:shadow-green-950 cursor-pointer">
+                    class="rounded-2xl py-3 px-7 font-semibold text-sm leading-7 text-white bg-main max-lg:mt-5 shadow-sm shadow-transparent transition-all duration-500 hover:bg-main/70 hover:shadow-green-950 cursor-pointer">
                     Track Your Order
                 </button>
             </div>
@@ -34,7 +34,7 @@
                 <div class="flex flex-col lg:flex-row items-center py-6 border-b border-gray-200 gap-6 w-full">
                     <div class="max-lg:w-full">
                         <img [src]="cartItem.product.imageCover" [alt]="cartItem.product.title"
-                            class="aspect-square w-full lg:max-w-[140px] rounded-xl object-cover" />
+                            class="aspect-square w-full lg:max-w-[140px] rounded-xl object-fill" />
                     </div>
                     <div class="flex flex-row items-center w-full">
                         <div class="grid grid-cols-1 lg:grid-cols-2 w-full">
@@ -116,15 +116,17 @@
         </div>
     </div>
     }
+    @if(allOrdersList.length > 3){
     <pagination-controls previousLabel="" nextLabel="" (pageChange)="p = $event"
         class="pagination-spreads"></pagination-controls>
+    }
 </section>
 }@else{
 <div class="container mb-15 mx-auto my-10">
     <div class="row">
         <div class="col-span-12 text-center">
             <img src="/images/orders.png" class="mx-auto w-105" alt="man-carrying-an-empty-cart">
-            <h2 class="font-bold text-2xl mb-2">You haven’t placed any orders yet</h2>
+            <h2 class="font-bold text-2xl mb-2">You haven't placed any orders yet</h2>
             <p class="text-gray-700 mb-0">
                 Let's change that! Discover awesome products and place your first order today.
             </p>
