--- a/src/app/features/orders/components/orders/orders.component.html
+++ b/src/app/features/orders/components/orders/orders.component.html
@@ -10,7 +10,7 @@
         </p>
     </div>
 
-    @for (order of allOrdersList| paginate:{itemsPerPage:3, currentPage: p}; track $index) {
+    @for (order of allOrdersList| paginate:{itemsPerPage, currentPage: p}; track $index) {
     <div class="w-full max-w-7xl px-4 py-3 md:px-5 lg-6 mx-auto">
         <div class="border-2 border-main rounded-xl pt-6 max-w-xl max-lg:mx-auto lg:max-w-full">
             <div class="flex flex-col lg:flex-row lg:items-center justify-between px-6 pb-6 border-b border-gray-200">
@@ -54,24 +54,24 @@
                                 </div>
                             </div>
                             <div class="grid grid-cols-5">
-                                <div class="col-span-5 lg:col-span-1 flex items-center max-lg:mt-3">
+                                <div class="col-span-5 lg:col-span-1 flex items-center max-lg:mt-3 text-center">
                                     <div class="flex gap-3 lg:block">
                                         <p class="font-medium text-sm leading-7 text-black">
                                             Price
                                         </p>
-                                        <p class="lg:mt-4 font-medium text-sm leading-7 text-main">
-                                            {{cartItem.price}}
+                                        <p class="lg:mt-4 font-medium text-sm leading-7 text-main text-center">
+                                            {{cartItem.price | number:'1.0-2'}}
                                         </p>
                                     </div>
                                 </div>
                                 <div class="col-span-5 lg:col-span-2 flex items-center max-lg:mt-3">
                                     <div class="flex gap-3 lg:block">
-                                        <p class="font-medium text-sm leading-7 text-black">
-                                            isDelivered
+                                        <p class="font-medium text-sm leading-7 text-black text-center">
+                                            Delivery Status
                                         </p>
                                         <p class="font-medium text-sm leading-6 whitespace-nowrap py-0.5 px-3 rounded-full lg:mt-3 text-center"
-                                            [class]="order.isDelivered ? 'bg-emerald-50 text-emerald-600' : 'bg-red-50 text-red-600'">
-                                            {{order.isDelivered}}
+                                            [class]="isDelivered(order.createdAt) ? 'bg-emerald-50 text-emerald-600' : 'bg-red-50 text-red-600'">
+                                            {{ isDelivered(order.createdAt) ? 'Delivered' : 'On the way' }}
                                         </p>
                                     </div>
                                 </div>
@@ -82,7 +82,7 @@
                                         </p>
                                         <p
                                             class="font-medium text-base whitespace-nowrap leading-7 lg:mt-3 text-main/70 text-center">
-                                            23rd March 2025
+                                            {{ getExpectedDeliveryDate(order.createdAt) }}
                                         </p>
                                     </div>
                                 </div>
@@ -110,7 +110,7 @@
                     </p>
                 </div>
                 <p class="font-semibold text-lg text-black py-6">
-                    Total Price: <span class="text-main"> {{order.totalOrderPrice}} EGP</span>
+                    Total Price: <span class="text-main"> {{order.totalOrderPrice | number:'1.0-2'}} EGP</span>
                 </p>
             </div>
         </div>
